--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     font-size: 20px;
 }
 .all{
-    background: url(Images/hmm.jpg) center/cover;
+    background: url(hmm.jpg) center/cover;
 }
 
 /* Navigation */
